--- a/html/nav.html
+++ b/html/nav.html
@@ -8,7 +8,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a href="BLABLA" id="home" class="brand"><img src="img/icon.png" height="45" width="90"></a>
+				<a href="#" id="home" class="brand"><img src="/img/fei_logo.png" height="45" width="90"></a>
 			</div>
 			<a href="#" ng-click="show_home()"> <span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true"></span>&nbsp; Home</a>       
 			<a href="#" ng-click=""> <span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true"></span>&nbsp; about us</a>
