--- a/html/home.html
+++ b/html/home.html
@@ -5,8 +5,7 @@
 		</h1>
 
 
-
-	<img src="/img/bank_2.png" alt="" height="200" width="200">
+	<img src="../img/bank_2.png" alt="" height="200" width="200"/>
 	<div class="container">
 		<h1>My Bootstrap Page aviv</h1>
 		<p>This is some text.</p> 
