--- a/html/nav.html
+++ b/html/nav.html
@@ -2,39 +2,67 @@
 <div id="nav">
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a href="#" id="home" class="brand"><img src="/img/fei_logo.png" height="45" width="90"></a>
+
+			<a class="navbar-brand" href="#" ng-click="show_home()"><img src="/img/fei_logo.png" height="45" width="90"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+					aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarToggler">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" href="#" ng-click="show_home()">
+							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
+							</span>
+							Home
+						</a>
+					</li>
+					<li class="nav-item" >
+						<a class="nav-link" href="#" ng-click="">
+							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true" >
+							</span>
+							About Us
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#" ng-click="show_search()">
+							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
+							</span>
+							Search
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#" ng-click="">
+							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
+							</span>
+							Update
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#" ng-click="">
+								<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
+								</span>
+							Statistics
+						</a>
+					</li>
+					<li class="nav-item  my-2 my-lg-0">
+						<a class="nav-link" href="" id="loggin_user" readonly> </a>
+					</li>
+
+
+					<li class="nav-item dropdown my-2 my-lg-0 ">
+						<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
+						   aria-expanded="false">More</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="#" ng-click="nav_bar_admin();">Admin</a>
+							<a class="dropdown-item" href="#" ng-click="nav_bar_log_out();">Log Out</a>
+						</div>
+					 </li>
+				</ul>
 			</div>
-			<a href="#" ng-click="show_home()"> <span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true"></span>&nbsp; Home</a>       
-			<a href="#" ng-click=""> <span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true"></span>&nbsp; about us</a>
-			<a href="#" ng-click="show_search()"> <span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true"></span>&nbsp; search</a>
-			<a href="#" ng-click=""> <span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true"></span>&nbsp; update</a>
-			<a href="#" ng-click=""> <span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true"></span>&nbsp; statistics</a>
-
-
-			<a href="" id="loggin_user" readonly> </a>
-			
-
-
-			<li class="dropdown">
-		        <a class="dropdown-toggle" data-toggle="dropdown" href="#">More
-		        <span class="caret"></span></a>
-		        <ul class="dropdown-menu">
-		          <li><a href="#" ng-click="nav_bar_admin();">Admin</a></li>
-		          <li><a href="#" ng-click="nav_bar_log_out();">Log Out</a></li>
-		        </ul>
-		     </li>
 			<!-- Items -->
 			
 		</div><!--/.container-fluid -->
 	</nav>
 		<!-- Static navbar -->
-	<div>
-		fvdvdfv	
-	</div>
 </div>	
