update navbar to right

--- a/html/nav.html
+++ b/html/nav.html
@@ -45,12 +45,13 @@
 							Statistics
 						</a>
 					</li>
-					<li class="nav-item  my-2 my-lg-0">
-						<a class="nav-link" href="" id="loggin_user" readonly> </a>
-					</li>
 
-
-					<li class="nav-item dropdown my-2 my-lg-0 ">
+                </ul>
+                <ul class="nav navbar-nav ml-auto justify-content-end">
+                    <li class="nav-item ml-auto" >
+                        <a class="nav-link" href="" id="loggin_user" readonly> </a>
+                    </li>
+					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
 						   aria-expanded="false">More</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
