--- a/html/nav.html
+++ b/html/nav.html
@@ -47,14 +47,14 @@
 					</li>
 
                 </ul>
-                <ul class="nav navbar-nav ml-auto justify-content-end">
+                <ul class="nav navbar-nav ml-auto justify-content-right">
                     <li class="nav-item ml-auto" >
                         <a class="nav-link" href="" id="loggin_user" readonly> </a>
                     </li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
+						<a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
 						   aria-expanded="false">More</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="#" ng-click="nav_bar_admin();">Admin</a>
 							<a class="dropdown-item" href="#" ng-click="nav_bar_log_out();">Log Out</a>
 						</div>
