update home page title

--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,7 @@
 
 	<img src="../img/bank_2.png" alt="" height="200" width="200"/>
 	<div class="container">
-		<h1>My Bootstrap Page aviv</h1>
+		<h1>My Bootstrap Page aviv & Roni & Coral & Pnina & Johanna</h1>
 		<p>This is some text.</p> 
 	</div>
 	<button type="button" class="btn btn-default" ng-click="show_splunk()" >show companies statistic</button>
