--- a/html/search.html
+++ b/html/search.html
@@ -1,27 +1,24 @@
 
 <div id="search_comp">
-
-
-
   <div class="sidenav">
     <ul class="nav nav-tabs">
 
       <li class="sideTabs"><a href="#SearchByName" data-toggle="tab">
         Search company by name <i class="fas fa-address-book"></i></a></li>
 
-        <li class="sideTabs"><a href="#SearchByCity" data-toggle="tab">Search company by city
-          <i class="fas fa-map-marker-alt"></i></a></li>
+      <li class="sideTabs"><a href="#SearchByCity" data-toggle="tab">Search company by city
+        <i class="fas fa-map-marker-alt"></i></a></li>
     </ul>
   </div>
 
   <div class="sidenavRight">
     <div class="tab-content">
-      <div class="tab-pane active" id="SearchByName">   
+      <div class="tab-pane active" id="SearchByName">
         <h1>Search a Company by Name</h1>
         <p>Fill in the Search data.</p>
 
         <div class="container">
-          <div class="row">    
+          <div class="row">
             <div class="col-xs-6 col-xs-offset-2">
               <div class="input-group">
                 <div class="input-group-btn search-panel">
@@ -33,15 +30,15 @@
                     <li><a href="#is_equal">It's equal</a></li>
                   </ul>
                 </div>
-                <input type="hidden" name="search_param" value="all" id="search_param">         
+                <input type="hidden" name="search_param" value="all" id="search_param">
                 <input type="text" class="form-control" name="x" placeholder="Search company...">
                 <span class="input-group-btn"></span>
 
-                <input type="hidden" name="search_param" value="all" id="search_param">         
+                <input type="hidden" name="search_param" value="all" id="search_param">
                 <input type="text" class="form-control" name="x" placeholder="Fill CIK">
                 <span class="input-group-btn"></span>
 
-                <input type="hidden" name="search_param" value="all" id="search_param">         
+                <input type="hidden" name="search_param" value="all" id="search_param">
                 <input type="text" class="form-control" name="x" placeholder="Fill RSSD ID">
                 <span class="input-group-btn"></span>
 
@@ -54,31 +51,28 @@
 
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 
-      </div> 
+      </div>
 
-      <div class="tab-pane col-sm-12" id="SearchByCity"> 
+      <div class="tab-pane col-sm-12" id="SearchByCity">
         <h1>Search a Company by City</h1>
         <p>Fill in the Search data.</p>
 
-        <p id="demo">A Paragraph.</p>
-
-
         <div class="col-sm-8">
           <label for="sel1">Select Country:</label>
-          <select class="form-control" id="selectedCountry" ng-change="getIframeSrc({{selectedCountryValue}})" ng-model="selectedCountryValue">
-              <option value="">Select..</option>
-              <option value="TEL_AVIV">TEL AVIV</option>
-              <option value="UNITED_STATES">UNITED STATES</option>
-              <option value="JAPAN">JAPAN</option>
+          <select class="form-control" id="selectedCountry" ng-change="changeState(); getIframeSrc()" ng-model="selectedCountryValue">
+            <option value="">Select..</option>
+            <option value="ISRAEL">ISRAEL</option>
+            <option value="UNITED_STATES">UNITED STATES</option>
+            <option value="JAPAN">JAPAN</option>
           </select>
           <br>
 
-          <label for="sel1">Select State:</label>
-          <select class="form-control">
-            <option>None</option>
-              <option>NY</option>
-              <option>CT</option>
-          </select>
+          <div id = "stateOptions">
+            <label for="sel1">Select State:</label>
+            <select class="form-control" ng-change="getIframeSrc()" ng-model="selectedStateValue">>
+              <option ng-repeat="state in arrayOfStates" value="{{state}}">{{state}}</option>
+            </select>
+          </div>
           <br>
 
           <!--<div class="col-sm-6" style="margin-bottom: 15px;">
@@ -104,140 +98,9 @@
           <iframe src="https://www.google.com/maps?&q=Israel&output=embed" width="100%" height="320" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
-
-
-        <!--<div class="col-xs-8">
-          <div id="googleMap" style="width:100%;height:400px;"></div>
-          <script>
-            function myMap() {
-            var mapProp= {
-                center:new google.maps.LatLng(51.508742,-0.120850),
-                zoom:5,
-            };
-            var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-            }
-          </script>
-        </div>
-
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkWnF457L3XZOE9WJ1wfPl5X1qmFxXrC0&callback=myMap"></script>-->
-
-        <!--<div id="locationField" class="col-xs-8">
-          <input id="autocomplete" placeholder="Enter a city" type="text" />
-        </div>
-
-        <div id="controls">
-          <select id="country">
-            <option value="es">Spain</option>
-            <option value="pt">Portugal</option>
-            <option value="us" selected>U.S.A.</option>
-            <option value="uk">United Kingdom</option>
-          </select>
-        </div>
-
-        <div id="map"></div>
-
-        <div id="listing">
-          <table id="resultsTable">
-            <tbody id="results"></tbody>
-          </table>
-        </div>
-
-        <script>
-      // This example uses the autocomplete feature of the Google Places API.
-      // It allows the user to find all hotels in a given place, within a given
-      // country. It then displays markers for all the hotels returned,
-      // with on-click details for each hotel.
-
-      // This example requires the Places library. Include the libraries=places
-      // parameter when you first load the API. For example:
-      // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
-
-      var map, places ;
-      var markers = [];
-      var autocomplete;
-      var countryRestrict = {'country': 'us'};
-      //var hostnameRegexp = new RegExp('^https?://.+?/');
-
-      var countries = {
-        'es': {
-          center: {lat: 40.5, lng: -3.7},
-          zoom: 5
-        },
-        'pt': {
-          center: {lat: 39.4, lng: -8.2},
-          zoom: 6
-        },
-        'us': {
-          center: {lat: 37.1, lng: -95.7},
-          zoom: 3
-        },
-        'uk': {
-          center: {lat: 54.8, lng: -4.6},
-          zoom: 5
-        }
-      };
-
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          zoom: countries['us'].zoom,
-          center: countries['us'].center,
-          mapTypeControl: false,
-          panControl: false,
-          zoomControl: false,
-          streetViewControl: false
-        });
-
-        // Create the autocomplete object and associate it with the UI input control.
-        // Restrict the search to the default country, and to place type "cities".
-        autocomplete = new google.maps.places.Autocomplete(
-            /** @type {!HTMLInputElement} */ (
-                document.getElementById('autocomplete')), {
-              types: ['(cities)'],
-              componentRestrictions: countryRestrict
-            });
-        places = new google.maps.places.PlacesService(map);
-
-        autocomplete.addListener('place_changed', onPlaceChanged);
-
-        // Add a DOM event listener to react when the user selects a country.
-        document.getElementById('country').addEventListener(
-            'change', setAutocompleteCountry);
-      }
-
-      // When the user selects a city, get the place details for the city and
-      // zoom the map in on the city.
-      function onPlaceChanged() {
-        var place = autocomplete.getPlace();
-        if (place.geometry) {
-          map.panTo(place.geometry.location);
-          map.setZoom(15);
-        } else {
-          document.getElementById('autocomplete').placeholder = 'Enter a city';
-        }
-      }
-
-      // Set the country restriction based on user input.
-      // Also center and zoom the map on the given country.
-      function setAutocompleteCountry() {
-        var country = document.getElementById('country').value;
-        if (country == 'all') {
-          autocomplete.setComponentRestrictions({'country': []});
-          map.setCenter({lat: 15, lng: 0});
-          map.setZoom(2);
-        } else {
-          autocomplete.setComponentRestrictions({'country': country});
-          map.setCenter(countries[country].center);
-          map.setZoom(countries[country].zoom);
-        }
-      }
-
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkWnF457L3XZOE9WJ1wfPl5X1qmFxXrC0&libraries=places&callback=initMap"
-        async defer></script>-->
-
       </div>
 
-  </div>
+    </div>
 
 
   </div>
