--- a/html/searchByName.html
+++ b/html/searchByName.html
@@ -39,7 +39,16 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 
       </div>
-
+      <div id="showResults">
+        <div class="card" style="width:400px">
+          <div class="card-header">Ally</div>
+          <div class="card-body">
+            <h4 class="card-title">John Doe</h4>
+            <p class="card-text">Some example text.</p>
+            <a href="#" class="btn btn-primary">See Profile</a>
+          </div>
+        </div>
+      </div>
     </div>
 
 
