--- a/html/nav.html
+++ b/html/nav.html
@@ -3,7 +3,7 @@
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 
 
-			<a class="navbar-brand" href="#" ng-click="show_home()"><img src="../img/fei_logo.png" height="45" width="90"></a>
+			<a class="navbar-brand" href="#" ng-click="show_home()"><img src="img/fei_logo.png" height="45" width="90"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
 					aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
