--- a/html/nav.html
+++ b/html/nav.html
@@ -39,7 +39,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" ng-click="">
+						<a class="nav-link" href="#" ng-click="get_companies()">
 								<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
 								</span>
 							Statistics
