--- a/html/industry.html
+++ b/html/industry.html
@@ -1,6 +1,8 @@
-<div id="stats" style="margin-top: 35px">
+<div id="stats" style="margin-top: 95px">
 
 
-    <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+    <div style="width: 150px;height: 150px">
+        <canvas id="myPieChart" width="150px" height="150px"></canvas>
+    </div>
 
 </div> <!--stats div-->
