update style of card - for results show

--- a/html/searchByName.html
+++ b/html/searchByName.html
@@ -37,17 +37,29 @@
         <br>
 
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <br>
 
       </div>
       <div id="showResults">
-        <div class="card" style="width:400px">
-          <div class="card-header">Ally</div>
+
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">A l l y</h4>
+                <p class="card-text">financial company</p>
+            </div>
           <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <p class="card-text">Some example text.</p>
-            <a href="#" class="btn btn-primary">See Profile</a>
+            <ul class="ulOfCard">
+                <li class="liOfCard"><div class="titleOfLi">About us</div> +1-111-111-11-11</li>
+                <li class="liOfCard"><div class="titleOfLi">About us</div>+1-111-111-11-11</li>
+                <li class="liOfCard"><div class="titleOfLi">About us</div>+1-111-111-11-11</li>
+            </ul>
           </div>
+
+            <div class="card-footer">
+
+            </div>
         </div>
+
       </div>
     </div>
 
