--- a/html/nav.html
+++ b/html/nav.html
@@ -32,11 +32,15 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" ng-click="">
-							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
-							</span>
-							Update
-						</a>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
+							   aria-expanded="false">update</a>
+							<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+								<a class="dropdown-item" href="#" ng-click="show_update('newComp');"><i class="fas fa-address-book"></i> Insert New Company </a>
+								<a class="dropdown-item" href="#" ng-click="show_update('updateComp');"><i class="fas fa-map-marker-alt"></i> Update Company </a>
+								<a class="dropdown-item" href="#" ng-click="show_update('newFile');"><i class="fas fa-map-marker-alt"></i> Insert New File </a>
+							</div>
+						</li>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#" ng-click="">
