--- a/html/searchByName.html
+++ b/html/searchByName.html
@@ -35,8 +35,7 @@
         </div>
 
         <br>
-
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" ng-click="searchByName()">Search</button>
+        <button class="btn btn-default" type="submit" ng-click="searchForResults()">Search  <i class="fas fa-search"></i></button>
 
         <br><br>
 
