--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -1,24 +1,36 @@
 <div id="searchResults">
 
-    <div class="card">
-        <div class="card-header">
-            <h4 class="card-title"><div id="nameOfCountryField"></div></h4>
-            <p class="card-text">financial company</p>
-        </div>
-        <div class="card-body">
-            <ul class="ulOfCard">
-                <li class="liOfCard"><div class="titleOfLi">About us</div> +1-111-111-11-11</li>
-                <li class="liOfCard"><div class="titleOfLi">Address</div>
-                    <div id="countryField"></div>
-                    <div id="cityField"></div>
-                </li>
-                <li class="liOfCard"><div class="titleOfLi">About us</div>+1-111-111-11-11</li>
-            </ul>
-        </div>
+    <div id="foundResults">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title"><div id="nameOfCountryField"></div></h4>
+                <p class="card-text">financial company</p>
+            </div>
+            <div class="card-body">
+                <ul class="ulOfCard">
+                    <li class="liOfCard"><div class="titleOfLi">About us</div> +1-111-111-11-11</li>
+                    <li class="liOfCard"><div class="titleOfLi">Address</div>
+                        <div id="countryField"></div>
+                        <div id="cityField"></div>
+                    </li>
+                    <li class="liOfCard"><div class="titleOfLi">About us</div>+1-111-111-11-11</li>
+                </ul>
+            </div>
 
-        <div class="card-footer">
+            <div class="card-footer">
 
+            </div>
         </div>
     </div>
+
+    <div id="noResults">
+        <h4>No results found !</h4>
+    </div>
+
+    <div id="loadingResults">
+        <h4>Searching..</h4>
+        <div class="loader"></div>
+    </div>
+
 
 </div>
