--- a/html/searchByName.html
+++ b/html/searchByName.html
@@ -36,7 +36,7 @@
         </div>
 
         <br>
-        <button class="btn btn-default" type="submit" ng-click="searchForResults()">Search  <i class="fas fa-search"></i></button>
+        <button class="btn btn-default" type="submit" ng-click="searchForResults('Name')">Search  <i class="fas fa-search"></i></button>
 
         <br><br>
 
