--- a/html/nav.html
+++ b/html/nav.html
@@ -34,11 +34,11 @@
 					<li class="nav-item">
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
-							   aria-expanded="false">update</a>
+							   aria-expanded="false">Update</a>
 							<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" href="#" ng-click="show_update('newComp');"><i class="fas fa-address-book"></i> Insert New Company </a>
-								<a class="dropdown-item" href="#" ng-click="show_update('updateComp');"><i class="fas fa-map-marker-alt"></i> Update Company </a>
-								<a class="dropdown-item" href="#" ng-click="show_update('newFile');"><i class="fas fa-map-marker-alt"></i> Insert New File </a>
+								<a class="dropdown-item" href="#" ng-click="show_update('newComp');"><i class="fas fa-building"></i> Insert New Company </a>
+								<a class="dropdown-item" href="#" ng-click="show_update('updateComp');"><i class="fas fa-edit"></i> Update Company </a>
+								<a class="dropdown-item" href="#" ng-click="show_update('newFile');"><i class="fas fa-file"></i> Insert New File </a>
 							</div>
 						</li>
 					</li>
