--- a/html/searchByCity.html
+++ b/html/searchByCity.html
@@ -6,24 +6,24 @@
         <div class="row">
             <div class="col-sm-4">
                 <label>Select Country:</label>
-                <input list="selectedCountry" ng-change="changeState(); changeCity(); getIframeSrc()" ng-model="selectedCountryValue">
+                <input list="selectedCountry" ng-change="updateDataCountryChange(); getIframeSrc()" ng-model="selectedCountryValue">
                 <datalist id="selectedCountry">
                     <option ng-repeat="country in arrayOfCountries" value="{{country}}">{{country}}</option>
                 </datalist>
-                <br>
 
                 <div id = "stateOptions" style="display: none">
+                    <br>
                     <label>Select State:</label>
-                    <input list="selectedState" ng-change="changeCity(); getIframeSrc()" ng-model="selectedStateValue">
+                    <input list="selectedState" ng-change="changeCity('True'); getIframeSrc()" ng-model="selectedStateValue">
                     <datalist id="selectedState">
                         <option ng-repeat="state in arrayOfStates" value="{{state}}">{{state}}</option>
                     </datalist>
-                    <br>
                 </div>
 
                 <div id = "cityOptions" style="display: none">
+                    <br>
                     <label>Select City:</label>
-                    <input list="selectedCity" ng-change="getIframeSrc()" ng-model="selectedCityValue">
+                    <input list="selectedCity" ng-change="changeStreet(); getIframeSrc()" ng-model="selectedCityValue">
                     <datalist id="selectedCity">
                         <option ng-repeat="city in arrayOfCities" value="{{city}}">{{city}}</option>
                     </datalist>
@@ -31,12 +31,12 @@
                 </div>
 
                 <div id = "streetOptions" style="display: none">
+                    <br>
                     <label>Select Street:</label>
                     <input list="selectedStreet" ng-change="getIframeSrc()" ng-model="selectedStreetValue">
                     <datalist id="selectedStreet">
                         <option ng-repeat="street in arrayOfStreets" value="{{street}}">{{street}}</option>
                     </datalist>
-                    <br>
                 </div>
 
             </div>
