add graph page with 3d graph of company

--- a/html/nav.html
+++ b/html/nav.html
@@ -45,6 +45,13 @@
 							Statistics
 						</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#" ng-click="show_graph();">
+								<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
+								</span>
+							graph
+						</a>
+					</li>
 
                 </ul>
                 <ul class="nav navbar-nav ml-auto justify-content-right">
