connect "update company" page to database and add alerts

--- a/html/insertNewComp.html
+++ b/html/insertNewComp.html
@@ -16,13 +16,13 @@
             </table>
         </font>
         <button type="submit" value="send" ng-click="insertNewComp()">Add New Company</button>
-        <button type="reset" value="Reset form" ng-click="clear()">Clear</button>
+        <button type="reset" value="Reset form" ng-click="clearInsert()">Clear</button>
     </center>
 </div>
 
 <div class="alert alert-success alert-dismissible" id="added_comp_successfully">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    <strong>Success!</strong> Added company successfully.
+    <strong>Success!</strong> Company added successfully.
 </div>
 
 <div class="alert alert-danger alert-dismissible" id="couldnt_add_new_comp">
