--- a/html/graph.html
+++ b/html/graph.html
@@ -1,24 +1,17 @@
-<div id="3ds">
+<div id="3ds" >
+    <div class="container-fluid" style="margin:0px;margin-top: 80px">
+        <div class="row col-sm-12">
+            <div id="3d-graph" class="col-sm-7" ></div>
 
-    <div id="3d-graph"></div>
+
+            <div id="comp_info" class="col-sm-5" style="display: none;">
+                <div class="col-sm-2">Name</div>
+                <div class="col-sm-2" id="graph_comp_name"></div>
 
 
-   <!-- <script>
-        // Random tree
-        const NODES = 300;
-        const GROUPS = 12;
-        //const gData = {nodes: [{id: 64, group: 1}, {id: 192, group: 1}, {id: 2, group: 2}, {id: 419, group: 1}, {id: 260, group: 1}, {id: 165, group: 1}, {id: 39, group: 1}, {id: 200, group: 1}, {id: 103, group: 1}, {id: 265, group: 1}, {id: 11, group: 1}, {id: 432, group: 1}, {id: 336, group: 1}, {id: 308, group: 1}, {id: 21, group: 1}, {id: 278, group: 1}, {id: 407, group: 1}, {id: 412, group: 1}, {id: 125, group: 1}, {id: 31, group:1}],
-         //   links: [{source: 64, target: 2}, {source: 192, target: 39}, {source: 192, target: 2}, {source: 2, target: 31}, {source: 2, target: 165}, {source: 2, target: 260}, {source: 2, target: 39}, {source: 2, target: 125}, {source: 2, target: 200}, {source: 2, target: 419}, {source: 2, target: 308}, {source: 2, target: 432}, {source: 2, target: 407}, {source: 2, target: 11}, {source: 2, target: 21}, {source: 2, target: 412}, {source: 2, target: 103}, {source: 2, target: 265}, {source: 2, target: 336}, {source: 2, target: 278}, {source: 260, target: 165}, {source: 260, target: 31}, {source: 260, target: 11}, {source: 260, target: 103}, {source: 260, target: 278}, {source: 200, target: 125}, {source: 103, target: 278}, {source: 265, target: 407}, {source: 265, target: 11}, {source: 265, target: 278}, {source: 11, target: 407}, {source: 11, target: 278}, {source: 308, target: 412}, {source: 21, target: 407}, {source: 21, target: 278}, {source: 278, target: 407}, {source: 125, target: 31}]}
-
-        const Graph = ForceGraph3D()
-        (document.getElementById('3d-graph'))
-            .jsonUrl('/html/graph.json')
-            .nodeLabel('id')
-            .nodeAutoColorBy('group')
-            //.linkAutoColorBy(d => gData.nodes[d.source].group)
-            .linkOpacity(0.5)
-            //.graphData(gData);
-    </script>-->
+            </div>
+        </div>
+    </div>
 
 
 
