create id alerts for insert' update and delete pages

--- a/html/deleteComp.html
+++ b/html/deleteComp.html
@@ -24,3 +24,8 @@
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <strong>Oops!</strong> Couldn't delete company.
 </div>
+
+<div class="alert alert-danger alert-dismissible" id="id_doesnt_exists_delete">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Oops!</strong> Couldn't delete company, ID doesn't exists!
+</div>
