--- a/html/insertNewComp.html
+++ b/html/insertNewComp.html
@@ -30,3 +30,8 @@
     <strong>Oops!</strong> Couldn't add company.
 </div>
 
+<div class="alert alert-danger alert-dismissible" id="id_already_exists_insert">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Oops!</strong> Couldn't add company, ID already exists!
+</div>
+
