--- a/html/updateComp.html
+++ b/html/updateComp.html
@@ -36,3 +36,8 @@
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <strong>Oops!</strong> Couldn't update company.
 </div>
+
+<div class="alert alert-danger alert-dismissible" id="id_doesnt_exists_update">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Oops!</strong> Couldn't update company, ID doesn't exists!
+</div>
