add full graph with edges with labes

--- a/html/graph.html
+++ b/html/graph.html
@@ -1,12 +1,15 @@
 <div id="3ds" >
-    <div class="container-fluid" style="margin:0px;margin-top: 80px">
+    <div class="container-fluid" style="margin-left:0;margin-right: 0;margin-top: 80px">
         <div class="row col-sm-12">
             <div id="3d-graph" class="col-sm-7" ></div>
 
 
             <div id="comp_info" class="col-sm-5" style="display: none;">
-                <div class="col-sm-2">Name</div>
-                <div class="col-sm-2" id="graph_comp_name"></div>
+                <div clas="col-sm-12">
+                    <div class="col-sm-6">Name</div>
+                    <div class="col-sm-6" id="graph_comp_name"></div>
+                </div>
+
 
 
             </div>
