Insert carousel to articles tab

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -45,15 +45,20 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#Stock" role="tab" data-toggle="tab">Stock</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Articles" role="tab" data-toggle="tab">Articles</a>
+                        </li>
                     </ul>
 
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade in active" id="GeneralInfo">
                             GeneralInfo
                         </div>
+
                         <div role="tabpanel" class="tab-pane fade" id="Competitors">
                             Competitors
                         </div>
+
                         <div role="tabpanel" class="tab-pane fade" id="Stock">
                             <div class="tradingview-widget-container">
                                 <div id="tradingview_a5966"></div>
@@ -63,6 +68,40 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div role="tabpanel" class="tab-pane fade" id="Articles">
+
+                            <h2>Articles About Us</h2>
+                            <div id="articlesCarousel" class="carousel slide container-fluid" data-ride="carousel">
+                                <ul class="carousel-indicators">
+                                    <li data-target="#articlesCarousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#articlesCarousel" data-slide-to="1"></li>
+                                    <li data-target="#articlesCarousel" data-slide-to="2"></li>
+                                </ul>
+
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <h2>111</h2>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <h2>222</h2>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <h2>333</h2>
+                                    </div>
+                                </div>
+
+                                <a class="carousel-control-prev" href="#articlesCarousel" data-slide="prev">
+                                <i class="fa fa-chevron-left"></i>
+                                </a>
+                                <a class="carousel-control-next" href="#articlesCarousel" data-slide="next">
+                                    <i class="fa fa-chevron-right"></i>
+                                </a>
+
+                            </div>
+
+                        </div>
+
                     </div>
 
                 </div>
