--- a/html/searchByCity.html
+++ b/html/searchByCity.html
@@ -6,16 +6,16 @@
 
         <div class="row">
             <div class="col-sm-4">
-                <label>Select Country:</label>
-                <input type="text" list="selectedCountry" data-constrain required ng-change="updateDataCountryChange(); getIframeSrc()" ng-model="selectedCountryValue">
+                <label>Country:</label>
+                <input type="text" list="selectedCountry" placeholder=" Search Country..." ng-change="updateDataCountryChange(); getIframeSrc()" ng-model="selectedCountryValue">
                 <datalist id="selectedCountry">
                     <option ng-repeat="country in arrayOfCountries" value="{{country}}">{{country}}</option>
                 </datalist>
 
                 <div id = "stateOptions" style="display: none">
                     <br>
-                    <label>Select State:</label>
-                    <input type="text" list="selectedState" data-constrain required ng-change="changeCity('True'); getIframeSrc()" ng-model="selectedStateValue">
+                    <label>State:</label>
+                    <input type="text" list="selectedState" placeholder=" Search State..." ng-change="changeCity('True'); getIframeSrc()" ng-model="selectedStateValue">
                     <datalist id="selectedState">
                         <option ng-repeat="state in arrayOfStates" value="{{state}}">{{state}}</option>
                     </datalist>
@@ -23,8 +23,8 @@
 
                 <div id = "cityOptions" style="display: none">
                     <br>
-                    <label>Select City:</label>
-                    <input type="text" list="selectedCity" data-constrain required ng-change="changeStreet(); getIframeSrc()" ng-model="selectedCityValue">
+                    <label>City:</label>
+                    <input type="text" list="selectedCity" placeholder=" Search City..." ng-change="changeStreet(); getIframeSrc()" ng-model="selectedCityValue">
                     <datalist id="selectedCity">
                         <option ng-repeat="city in arrayOfCities" value="{{city}}">{{city}}</option>
                     </datalist>
@@ -33,8 +33,8 @@
 
                 <div id = "streetOptions" style="display: none">
                     <br>
-                    <label>Select Street:</label>
-                    <input type="text" list="selectedStreet" data-constrain ng-change="getIframeSrc()" ng-model="selectedStreetValue">
+                    <label>Street:</label>
+                    <input type="text" list="selectedStreet" placeholder=" Search Street..." ng-change="getIframeSrc()" ng-model="selectedStreetValue">
                     <datalist id="selectedStreet">
                         <option ng-repeat="street in arrayOfStreets" value="{{street}}">{{street}}</option>
                     </datalist>
