general information of result - title and products

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -52,7 +52,26 @@
 
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade in active" id="GeneralInfo">
-                            GeneralInfo
+
+                            <div class="container-fluid titleOfGeneralResult">
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <h2> Ally Financial </h2>
+                                        <h4>Public company of Financial services</h4>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <img class ="logoImg" src="//upload.wikimedia.org/wikipedia/commons/thumb/0/00/Ally_Financial.svg/360px-Ally_Financial.svg.png"
+                                             alt="logo" height="100" width="100">
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
+                            <span class="badge badge-pill badge-info">Car finance</span>
+                            <span class="badge badge-pill badge-info">Online banking</span>
+                            <span class="badge badge-pill badge-info">Mortgages</span>
+                            <span class="badge badge-pill badge-info">Credit cards</span>
+                            <span class="badge badge-pill badge-info">Brokerage firm</span>
+
                         </div>
 
                         <div role="tabpanel" class="tab-pane fade" id="Competitors">
