--- a/html/searchByCity.html
+++ b/html/searchByCity.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <label>Country:</label>
-                <input type="text" list="selectedCountry" placeholder=" Search Country..." ng-change="updateDataCountryChange(); getIframeSrc()" ng-model="selectedCountryValue">
+                <input type="text" list="selectedCountry" placeholder=" Select Country..." ng-change="updateDataCountryChange(); getIframeSrc()" ng-model="selectedCountryValue">
                 <datalist id="selectedCountry">
                     <option ng-repeat="country in arrayOfCountries" value="{{country}}">{{country}}</option>
                 </datalist>
@@ -15,7 +15,7 @@
                 <div id = "stateOptions" style="display: none">
                     <br>
                     <label>State:</label>
-                    <input type="text" list="selectedState" placeholder=" Search State..." ng-change="changeCity('True'); getIframeSrc()" ng-model="selectedStateValue">
+                    <input type="text" list="selectedState" placeholder=" Select State..." ng-change="changeCity('True'); getIframeSrc()" ng-model="selectedStateValue">
                     <datalist id="selectedState">
                         <option ng-repeat="state in arrayOfStates" value="{{state}}">{{state}}</option>
                     </datalist>
@@ -24,7 +24,7 @@
                 <div id = "cityOptions" style="display: none">
                     <br>
                     <label>City:</label>
-                    <input type="text" list="selectedCity" placeholder=" Search City..." ng-change="changeStreet(); getIframeSrc()" ng-model="selectedCityValue">
+                    <input type="text" list="selectedCity" placeholder=" Select City..." ng-change="changeStreet(); getIframeSrc()" ng-model="selectedCityValue">
                     <datalist id="selectedCity">
                         <option ng-repeat="city in arrayOfCities" value="{{city}}">{{city}}</option>
                     </datalist>
@@ -34,7 +34,7 @@
                 <div id = "streetOptions" style="display: none">
                     <br>
                     <label>Street:</label>
-                    <input type="text" list="selectedStreet" placeholder=" Search Street..." ng-change="getIframeSrc()" ng-model="selectedStreetValue">
+                    <input type="text" list="selectedStreet" placeholder=" Select Street..." ng-change="getIframeSrc()" ng-model="selectedStreetValue">
                     <datalist id="selectedStreet">
                         <option ng-repeat="street in arrayOfStreets" value="{{street}}">{{street}}</option>
                     </datalist>
