--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -52,25 +52,63 @@
 
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade in active" id="GeneralInfo">
-
                             <div class="container-fluid titleOfGeneralResult">
                                 <div class="row">
                                     <div class="col-sm-8">
+                                        <br>
                                         <h2> Ally Financial </h2>
                                         <h4>Public company of Financial services</h4>
                                     </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-sm-4" style="margin-top: 20px">
                                         <img class ="logoImg" src="//upload.wikimedia.org/wikipedia/commons/thumb/0/00/Ally_Financial.svg/360px-Ally_Financial.svg.png"
                                              alt="logo" height="100" width="100">
                                     </div>
                                 </div>
                             </div>
-                            <br>
-                            <span class="badge badge-pill badge-info">Car finance</span>
-                            <span class="badge badge-pill badge-info">Online banking</span>
-                            <span class="badge badge-pill badge-info">Mortgages</span>
-                            <span class="badge badge-pill badge-info">Credit cards</span>
-                            <span class="badge badge-pill badge-info">Brokerage firm</span>
+
+                            <div class="products" style="margin-top: 20px">
+                                <span class="badge badge-pill badge-info">Car finance</span>
+                                <span class="badge badge-pill badge-info">Online banking</span>
+                                <span class="badge badge-pill badge-info">Mortgages</span>
+                                <span class="badge badge-pill badge-info">Credit cards</span>
+                                <span class="badge badge-pill badge-info">Brokerage firm</span>
+                            </div>
+
+                            <div class="container-fluid titleOfGeneralResult" style="margin-top: 20px">
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <p>
+                                            Ally Financial Inc. is a bank holding company organized in Delaware and headquartered in Detroit, Michigan. The company provides financial services including online banking, car finance, corporate lending, vehicle insurance, mortgages, credit cards, and brokerage firm services.
+                                            Ally is ranked 19th on the list of largest banks in the United States by assets. It is the largest car finance company in the U.S. by volume[4] and serves approximately 18,500 automotive dealerships and 4.3 million retail consumers.[3] Via its SmartAuction online marketplace for auto auctions, launched in 2000, the company has sold more than 5 million vehicles including 356,000 vehicles sold in 2017.
+                                        </p>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <table class="table tableOfGeneralInfo">
+                                            <tr>
+                                                <td>Address</td>
+                                                <td>USA</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Founded</td>
+                                                <td>1919</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Revenue</td>
+                                                <td>US$ 9.866 billion </td>
+                                            </tr>
+                                            <tr>
+                                                <td>Number of employees</td>
+                                                <td>7,678</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Website</td>
+                                                <td><a href="https://www.ally.com">www.ally.com</a></td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+
 
                         </div>
 
