--- a/html/nav.html
+++ b/html/nav.html
@@ -26,7 +26,7 @@
 					</li>
 					<li class="nav-item">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
+                            <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink1" data-toggle="dropdown" href="#"  aria-haspopup="true"
                                aria-expanded="false">Search</a>
                             <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" href="#" ng-click="show_search('name');">Search By Name <i class="fas fa-address-book"></i></a>
