change graph node color and label text color

--- a/html/graph.html
+++ b/html/graph.html
@@ -14,13 +14,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="row col-sm-12">
-                        <div id="3d-graph" class="col-sm-5" ></div>
-
-                        <div class="col-sm-6">
-                            A corporation may be referred to as an "affiliate" of another when it is related to it but not
-                            strictly controlled by it, as with a subsidiary relationship, or when it is desired to avoid the
-                            appearance of control. This is sometimes seen with companies that need to avoid restrictive
-                            laws (or negative public opinion) on foreign ownership.
+                        <div id="3d-graph2"></div>
+                        <div>
+                            Connection Details
                         </div>
                     </div>
                 </div>
